FrontEnd/src/app/home/view/upload/upload.component.scss
.upload {
	display: flexbox;
	align-items: center;
	padding: 4%;
	background-color: #dde7f0;
	//width: 100%;
	border-radius: 5px;
	max-height: 92.5vh;
	min-height: 92.5vh;
	box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
	position: relative;
	
}

.upload button {
	align-self: center;
	margin-top: auto;
	margin-bottom: 4vh;
}

.column-btn-container {
	position: absolute;
	bottom: 2vh;
	width: 100%;
	display: flex;
	flex-direction: column;
	align-items: center;
}

.column-btn {
	margin: 0.25vh 0;
	width: 20vw;
}

.upload-pic {
	padding: 5%;
	width: 30%;
	margin-left: auto;
	margin-right: auto;
	margin-top: 10%;
	opacity: 50%;
}

.file.input {
	padding: 5%;
	width:30%;
	margin-left: auto;
	margin-right: auto;
	margin-top: 10%;
	opacity: 50%;
}
.upload_text {
	padding: 5%;
	width:30%;
	margin-right: 100%;
	margin-top: 10%;
	margin-bottom: 10%;
	opacity: 50%;
}

.space{
	flex: 0 0 20%;

	
}

.file {
	margin-left: 5%;

}

.spinner-overlay {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: rgba(255,255,255,0.7);
	display: flex;
	align-items: center;
	justify-content: center;
	z-index: 10;
  }
  
  .upload-pic.dimmed,
  .file input:disabled {
	opacity: 0.5;
  }

  :host ::ng-deep .mat-progress-spinner .mat-progress-spinner-path {
	stroke: #ef5f67 !important;
  }

